[package]
name = "gameplay-sandbox"
version = "0.1.0"
edition = "2024"

[features]
bevy_debug = ["bevy/debug", "bevy/file_watcher"]

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["bevy_winit", "2d_bevy_render", "ui_bevy_render"] }
rand = "0.9.4"
rand_chacha = "0.9.0"
ron = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy = { version = "0.18.1", default-features = false, features = ["web", "webgl2"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
